# dify-terminal

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/dify_terminal/: __main__.py
